--- a/app.json
+++ b/app.json
@@ -20,6 +20,7 @@
       "package": "com.kloudiusreactnative"
     },
     "web": {
+      // "bundler": "metro",
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
