--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.16.0",
+    "react-native-vector-icons": "^10.3.0",
     "react-native-web": "^0.21.0",
     "react-native-worklets": "^0.5.1",
+    "toastify-react-native": "^7.2.3",
     "zod": "^4.3.5"
   },
   "devDependencies": {
