--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "expo-linking": "~8.0.8",
     "expo-splash-screen": "~31.0.10",
     "expo-system-ui": "~6.0.7",
+    "nanoid": "^5.1.6",
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-dom": "19.1.0",
