--- a/package.json
+++ b/package.json
@@ -6,7 +6,10 @@
     "start": "expo start --dev-client",
     "web": "expo start --web",
     "android": "expo run:android",
-    "ios": "expo run:ios"
+    "ios": "expo run:ios",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage"
   },
   "dependencies": {
     "@expo/metro-runtime": "~6.1.2",
@@ -44,8 +47,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
+    "@testing-library/react-native": "^12.7.2",
+    "@types/jest": "^29.5.12",
     "@types/react": "~19.1.10",
+    "jest": "^29.7.0",
+    "jest-expo": "^54.0.0",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "react-test-renderer": "19.1.0",
     "tailwindcss": "^3.4.17",
     "typescript": "~5.9.2"
   },
